--- a/anvil/scss/modules/_variables.scss
+++ b/anvil/scss/modules/_variables.scss
@@ -30,7 +30,7 @@ tardis,
 bright-green
 - any others will produce an error
 */
-$theme: 'mango';
+$theme: 'dijon';
 
 %timeline-panel-hover-style {
   background-color: $soft-black;
